--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdgExternals">
+        <activity android:name=".recruitment_quiz"></activity>
+        <activity android:name=".recruitment_home" />
+        <activity android:name=".recruitment_signup" />
+        <activity android:name=".recruitment_login" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
