fully functioning quiz of technical and design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdgExternals">
-        <activity android:name=".design_quiz"></activity>
+        <activity android:name=".finishQuiz"></activity>
+        <activity android:name=".design_quiz" />
         <activity android:name=".landingActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,8 +25,8 @@
         <activity android:name=".recruitment_home" />
         <activity android:name=".recruitment_signup" />
         <activity android:name=".recruitment_login" />
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
