--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AdgExternals">
-        <activity android:name=".management_quiz"></activity>
+        <activity android:name=".adg_info"></activity>
+        <activity android:name=".management_quiz" />
         <activity android:name=".finishQuiz" />
         <activity android:name=".design_quiz" />
         <activity android:name=".landingActivity">
@@ -28,6 +29,10 @@
         <activity android:name=".recruitment_login" />
         <activity android:name=".MainActivity" />
         <activity android:name=".MainActivity" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
